--- a/src/app/parcela/crear-parcela/crear-parcela.component.html
+++ b/src/app/parcela/crear-parcela/crear-parcela.component.html
@@ -38,34 +38,34 @@
                 <h1>Datos</h1>
                 <div class="form-group">           
                     <label for="referencia">Referencia catastral:</label>
-                    <input type="text" id="referencia" name="referencia" required><br>
+                    <input type="text" id="referenciaC" name="referenciaC" required><br>
 
                     <label for="uso-principal">Uso principal:</label>
-                    <select id="uso-principal" name="uso-principal">
+                    <select id="uso-principalC" name="usoPrincipalC">
                         <option value="Agrario">Agrario</option>
                     </select> 
 
                     <label for="escalera">Escalera:</label>
-                    <input type="number" id="escalera" name="escalera">
+                    <input type="number" id="escaleraC" name="escaleraC">
 
                     <label for="planta">Planta:</label>
-                    <input type="number" id="planta" name="planta">
+                    <input type="number" id="plantaC" name="plantaC">
 
                     <label for="puerta">Puerta:</label>
-                    <input type="number" id="puerta" name="puerta">
+                    <input type="number" id="puertaC" name="puertaC">
                 </div>
             </div>
             <div class="form-header">
                 <h1>Características</h1>                               
                 <div class="form-group">
                     <label for="tipo-reforma">Tipo reforma:</label>
-                    <select id="tipo-reforma" name="tipo-reforma"></select> 
+                    <input type="text" id="tipoReformaC" name="tipoReformaC"> 
 
                     <label for="fecha-reforma">Fecha reforma:</label>
-                    <select id="fecha-reforma" name="fecha-reforma"></select>
+                    <input type="date" id="fechaReformaC" name="fechaReformaC">
 
                     <label for="superficie">Superficie:</label>
-                    <select id="superficie" name="superficie"></select> 
+                    <select id="superficie" name="superficieC"></select> 
                 </div>      
             </div>
         </div>
