--- a/src/app/movimientos/crear-movimiento/crear-movimiento.component.scss
+++ b/src/app/movimientos/crear-movimiento/crear-movimiento.component.scss
@@ -1,27 +1,28 @@
 .user-form {
     height: calc(100% - 32px); 
-    overflow-y: auto;
     padding: 20px;
     border-radius: 10px;
     background-color: rgb(238, 238, 237);
-  }
-  
-  .flex{
+    overflow-y: auto;
     display: flex;
-    width: fit-content;
+}
+
+.flex{
+    display: flex;
+    width: 100%;
     height: fit-content;
-  }
-  
-  h2 {
+}
+
+h2 {
     text-align: center;
     color: black;
     background-color: #0770fa;
     border-radius: 10px;
     margin: unset;
     width: 100%;
-  }
-  
-  .form-header{
+}
+
+.form-header{
     padding: 15px;
     margin-top: 10px;
     border: 2px solid #0770fa;
@@ -30,9 +31,9 @@
     height: fit-content;
     margin-bottom: 10px;
     margin-right: 70px;
-  }
-  
-  h1 {
+}
+
+h1 {
     font-weight: bold;
     color: black;
     margin: unset;
@@ -40,63 +41,61 @@
     background-color: rgb(238, 238, 237);
     width: fit-content;
     margin-bottom: 10px;
-  }
-  
-  .form-group {
+}
+
+.form-group {
     flex-direction: column;
-  }
-  
-  .user-form label {
-    flex-basis: 100%;
-    font-weight: bold;
+}
+
+.user-form label {
     font-size: 0.8rem;
     color: hsl(0, 0%, 20%);
     width: fit-content;
-  }
-  
-  .user-form input {
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    margin-bottom: 10px;
-    width: 100%; 
-    justify-self: end;
-  }
-  
-  .user-form select {
+    margin-right: 20px;
+    margin-top: 5px;
+}
+
+.user-form input {
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 0.8rem;
     margin-bottom: 10px;
     width: 100%; 
-    justify-self: end;
-    margin-bottom: 13px;
-  }
-  
-  .div-buttons{
-    width: fit-content
-    height fit-content;
+    margin-right: 20px;
+}
+
+.user-form select {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+    width: 100%; 
+}
+
+.div-buttons{
+    width: fit-content;
     display: flex;
-  }
-  
-  .save-button{
+    margin-top: 20px;
+    margin-left: auto;
+}
+
+.create-button{
     width: 100px;
     background-color: #2bea04;
     color: white;
-    margin-top: 15px;
-    margin-right: 10px;
-  }
+}
   
-  .cancel-button{
+.cancel-button{
     width: 100px;
     background-color: red;
     color: black;
-    margin-top: 15px;
-  }
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
-  .file-upload {
+.file-upload {
     display: flex;
     align-items: center;
     margin: 20px 0;
@@ -130,31 +129,30 @@
     margin-left: 50px;
     width: fit-content;
   }
-  
-  
-  @media only screen and (max-width: 1543px) {
-    .user-form{
+
+@media only screen and (max-width: 1340px) {
+  .user-form{
       flex-direction: column;
       align-items: left;
     }
-  
+
     .flex{
       flex-direction: column;
       align-items: left;
       width: 100%;
     }
-  
+
     .form-header{
       width: 100%;
     }
-  
+
     .form-group {
       flex-direction: column;
       margin-right: 0;
       margin-left: 0;
       width: 100%;
     }
-  
+
     .user-form input {
       padding: 8px;
       border-radius: 5px;
@@ -163,13 +161,14 @@
       margin-bottom: 10px;
       width: 100%; 
     }
-  
+
     .div-buttons{
       width: fit-content;
       height: fit-content;
+      margin: inherit;
     }
-  
-    .save-button{
+
+    .create-button{
       background-color: #2bea04;
       color: white;
     }
@@ -177,5 +176,5 @@
     .cancel-button{
       background-color: red;
       color: black;
-    }  
-  }
+    }
+}
